Fix Quality Flaws S6204: Replace '.collect(Collectors.toList())' with '.toList()'