@@ -92,7 +92,7 @@ public abstract class AbstractHardCodedCredentialChecker extends IssuableSubscri
     return Stream.of(getCredentialWords().split(","))
       .map(String::trim)
       .map(word -> Pattern.compile("(" + word + ")" + suffix, Pattern.CASE_INSENSITIVE))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   protected Optional<String> isSettingCredential(MethodInvocationTree tree) {
