@@ -67,7 +67,7 @@ public class AccessibilityChangeOnRecordsCheck extends AbstractAccessibilityChan
         List<JavaFileScannerContext.Location> secondaries = secondaryTargets.getOrDefault(symbol, Collections.emptyList())
           .stream()
           .map(mit -> new JavaFileScannerContext.Location(SECONDARY_MESSAGE, mit))
-          .collect(Collectors.toList());
+          .toList();
         reportIssue(setInvocation, MESSAGE, secondaries, null);
       }
     }
