@@ -99,7 +99,7 @@ public class SelfAssignementCheck extends IssuableSubscriptionVisitor {
         .filter(m -> m.is(Tree.Kind.VARIABLE))
         .map(VariableTree.class::cast)
         .map(m -> m.simpleName().name())
-        .collect(Collectors.toList());
+        .toList();
 
       if (memberNames.contains(name)) {
         return JavaQuickFix.newQuickFix("Disambiguate this self-assignment")
