@@ -135,7 +135,7 @@ public class SeveralBreakOrContinuePerLoopCheck extends BaseTreeVisitor implemen
 
       List<JavaFileScannerContext.Location> secondaryLocations = breakAndContinues.stream()
           .map(t -> new JavaFileScannerContext.Location(String.format("\"%s\" statement.", t.is(Tree.Kind.BREAK_STATEMENT) ? "break" : "continue"), t))
-          .collect(Collectors.toList());
+        .toList();
 
       context.reportIssue(this, primaryLocationTree,
         "Reduce the total number of break and continue statements in this loop to use at most one.",
