@@ -51,7 +51,7 @@ public class SimpleClassNameCheck extends IssuableSubscriptionVisitor {
   public void visitNode(Tree tree) {
     CompilationUnitTree cut = (CompilationUnitTree) tree;
     cut.types().stream().filter(NOT_EMPTY_STATEMENT).map(t -> ((ClassTree) t).symbol()).forEach(this::checkSymbol);
-    List<ImportTree> imports = cut.imports().stream().filter(NOT_EMPTY_STATEMENT).map(ImportTree.class::cast).collect(Collectors.toList());
+    List<ImportTree> imports = cut.imports().stream().filter(NOT_EMPTY_STATEMENT).map(ImportTree.class::cast).toList();
     boolean fileContainsStarImport = imports.stream()
       .filter(it -> it.qualifiedIdentifier().is(Kind.MEMBER_SELECT))
       .map(it -> ((MemberSelectExpressionTree) it.qualifiedIdentifier()).identifier())
