@@ -50,7 +50,7 @@ public class ValueAnnotationShouldInjectPropertyOrSpELCheck extends IssuableSubs
       .stream()
       .filter(m -> m.is(Tree.Kind.VARIABLE))
       .flatMap(field -> ((VariableTree) field).modifiers().annotations().stream())
-      .collect(Collectors.toList());
+      .toList();
 
     List<AnnotationTree> interfaceAnnotations = cls.is(Tree.Kind.ANNOTATION_TYPE) ? cls.modifiers().annotations() : List.of();
 
